# AI_Python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AI.ipynb  AI2.html  AI2.ipynb  CONTRIBUTING.md  Dataset.csv  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  Product_rec.ipynb  README.md  ai3.ipynb  app.py  docker-compose.yml  plotly.ipynb  pyproject.toml  requirements.txt  run_dashboard.sh  setup.py
assets/data/: Dataset.csv
docker/: .dockerignore  README.md  docker-compose.override.yml  docker-compose.prod.yml
docker/development/: Dockerfile
docs/user_guide/: docker_deployment.md  getting_started.md
examples/: basic_usage.py
nginx/: nginx.conf
scripts/: docker-setup.sh
src/: dashboard.py
src/config/: settings.py
src/utils/: __init__.py  chart_helpers.py  data_insights.py  data_processing.py
